Parser/test_cases/bad/commastartingformallist.cl
class Test {
  foo:Test;
  bar(,x:Int):Int {5};
};
